fix: Underline hangs in text when h3 wraps. To Avoid that the second text line when the h3 text wraps hanngs in the underline a line-height was added to the h3

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -328,7 +328,9 @@ footer h3 {
     text-decoration: underline;
     text-decoration-color: #cd4c1d;
     text-underline-offset: 0.5rem;
+    margin-bottom: 0.5rem;
     font-size: 1.2rem;
+    line-height: 1.5;
 }
 
 footer ul {
